# HasbuEngine

./: .gitignore  .gitmodules  CMakeLists.txt  build_script.sh  config.cmake  config.json  imgui.ini  main.cpp  premake5.lua  vcpkg.json
Chapters/: functions.lua
Chapters/Chapter1/3D/: 3D.fs  3D.vs  3D1.cpp  3DFS.glsl
Chapters/Chapter1/Excs/shaders/: Exc2.vs
Chapters/Chapter1/Excs/textures/: Exc1.fs
Chapters/Chapter1/GLSL/: GLSL.fs  GLSL.vs  glsl.cpp
Chapters/Chapter1/HelloTriangle/: hello_triangle.cpp
Chapters/Chapter1/Math/: Math.cpp  Math.vs
Chapters/Chapter1/Textures/: Tex.cpp  Tex.vs
Demos/: Luces.cpp
Demos/resources/Shaders/: Colors_fs.glsl  Ligths_fs.glsl  Ligths_vs.glsl
Hasbu/: CMakeLists.txt  Hasbu.hpp  configurated.sh
Hasbu/include/: defines.hpp
Hasbu/include/API/: VertexArray.hpp
Hasbu/include/Application/: Application.hpp  EntityManager.hpp  EventDispatcher.hpp  Input.hpp  KeyCodes.hpp  Window.hpp  WindowData.hpp
Hasbu/include/Components/: CamaraComponents.hpp  MaterailComponents.hpp  MeshComponents.hpp  RenderComponents.hpp
Hasbu/include/ImGuiLayer/: ImguiLayer.hpp
Hasbu/include/Panels/: Panels.hpp
Hasbu/include/Renderer/: CamaraSystem.hpp  Camera.hpp  Context.hpp  MeshManager.hpp  ModelsManager.hpp  Render.hpp  RenderManager.hpp  Shader.hpp  ShaderManager.hpp  Texture.hpp  TextureManager.hpp  Vertex.hpp
Hasbu/include/Utilities/: DynamicAllocator.hpp  FileManager.hpp  Logger.hpp  offsetAllocator.hpp
Hasbu/resources/Objects/cube/: Cube.mtl
Hasbu/resources/Objects/lamp/: license.txt  scene.gltf
Hasbu/resources/Shaders/: 3D_fs.glsl  Colors_fs.glsl  Colors_vs.glsl  LightCasters_fs.glsl  LightCasters_vs.glsl  LightinMaps_fs.glsl  Ligths_fs.glsl  Materials_fs.glsl  Materials_vs.glsl  ModelLoading_fs.glsl  ModelLoading_fs2.glsl  ModelLoading_vs.glsl  MultipleLights_fs.glsl  Spotlight_fs.glsl  Spotlight_vs.glsl
Hasbu/src/: Hasbu.hpp  defines.cpp  defines.hpp  premake5.lua
Hasbu/src/API/: CMakeLists.txt
Hasbu/src/API/OpenGL/: OpenGLContext.cpp  OpenGLShaders.cpp  RenderManagerOpenGL.cpp  ShaderManagerOpenGL.cpp  TextureManagerOpenGL.cpp  TextureOpenGL.cpp  VertexArrayOpenGL.cpp  VertexBuffers.cpp
Hasbu/src/Application/: Application.cpp  CMakeLists.txt  EntityManager.cpp  EventDispatcher.cpp  Input.cpp  Window.cpp  WindowData.cpp
Hasbu/src/ImGuiLayer/: ImguiLayerOpenGL.cpp
Hasbu/src/Imgui/: CMakeLists.txt  ImguiLayerOpenGL.cpp
Hasbu/src/Panels/: CMakeLists.txt  Panels.cpp
Hasbu/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
Hasbu/src/Platform/Window/: MacWindow.cpp  MacWindow.hpp
Hasbu/src/Render/: GraphicContext.cpp  GraphicContext.hpp  Render.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  VertexIndexBuffer.cpp  VertexIndexBuffer.hpp
Hasbu/src/Renderer/: CMakeLists.txt  CamaraSystem.cpp  Camera.cpp  MeshManager.cpp  ModelsManager.cpp
Hasbu/src/Shader/: ShaderManager.cpp  ShaderManager.hpp
Hasbu/src/Utilities/: CMakelists.txt  DynamicAllocator.cpp  FileManager.cpp  Logger.cpp  offsetAllocator.cpp
Hasbu/src/core/: Application.cpp  Application.hpp  Camera.hpp  Configuration.cpp  Configuration.hpp  Entrypoint.hpp  TextureManager.cpp  TextureManager.hpp  Window.cpp  Window.hpp  WindowData.hpp
OpenGl/: defines.hpp
OpenGl/App/: premake5.lua
OpenGl/App/Shader/: ShaderManager.cpp  ShaderManager.hpp
OpenGl/App/core/: Application.cpp  Application.hpp  ElementBuffer.cpp  ElementBuffer.hpp  TextureManager.cpp  TextureManager.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  stb_image.h
OpenGl/App/render/: Render.hpp
OpenGl/Chapters/: functions.lua  premake5.lua
OpenGl/Chapters/Chapter1/Excs/Exc1/: Exc1.cpp  Exc1.fs
OpenGl/Chapters/Chapter1/Excs/Exc2/: Exc2.cpp
OpenGl/Chapters/Chapter1/Excs/Exc3/: Exc3.cpp  Exc3_2.fs  Exc3_2.vs
OpenGl/Chapters/Chapter1/Excs/shaders/: Exc3.vs
OpenGl/Chapters/Chapter1/Excs/textures/: Exc1.cpp  Exc2.fs
OpenGl/Chapters/Chapter1/GLSL/: glsl.cpp
OpenGl/Chapters/Chapter1/HelloTriangle/: hello_triangle.cpp  hello_triangle.fs
OpenGl/Chapters/Chapter1/Math/: Math.cpp  Math.fs
OpenGl/Chapters/Chapter1/Textures/: Tex.cpp
OpenGl/Dependencies/Glad/: glad.c  glad.h  premake5.lua
OpenGl/Dependencies/Window/: Window.cpp  Window.hpp  premake5.lua
Sandbox/: premake5.lua
Sandbox/src/: Sandbox.cpp
